# CEF3-starter

./: .gitignore  CMakeLists.txt  README.md
CEF3App/Independent/: client_app.cpp  client_app.h  client_handler.h  util.h
CEF3App/Linux/: main.cpp
CEF3App/Mac/: AppDelegate.h  main.mm
CEF3App/Win/: main.cpp
CEF3SimpleSample/CEF/x86/Linux/Resources/: cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak  devtools_resources.pak
CEF3SimpleSample/CEF/x86/Linux/Resources/locales/: am.pak  ar.pak  bn.pak  ca.pak  de.pak  el.pak  es-419.pak  fa.pak  fi.pak  he.pak  hu.pak  id.pak  ja.pak  lv.pak  ml.pak  mr.pak  ms.pak  nl.pak  pt-BR.pak  ru.pak  sl.pak  sr.pak  ta.pak  te.pak  th.pak  vi.pak  zh-TW.pak
CEF3SimpleSample/CEF/x86/Linux/include/: cef_pack_resources.h  cef_version.h
CEF3SimpleSample/CEF/x86/Win/Resources/: cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak
CEF3SimpleSample/CEF/x86/Win/Resources/locales/: ar.pak  es-419.pak  fa.pak  fi.pak  hu.pak  id.pak  ml.pak  nl.pak  pt-BR.pak  ru.pak  th.pak  vi.pak  zh-TW.pak
CEF3SimpleSample/CEF/x86/Win/include/: cef_pack_resources.h  cef_version.h
CEF3SimpleSample/Independent/: client_app.cpp  client_handler.cpp
CEF3SimpleSample/Linux/: client_handler_linux.cpp  main.cpp
CEF3SimpleSample/Win/: cefclient.rc  client_handler_win.cpp
assets/web/: index.html
assets/web/js/: app.js
cmake/: version.cmake
cmake/CEF/: FindCEF.cmake  cef.cmake  cef_variables.cmake
scripts/linux/: configure.sh
scripts/mac/: build.sh  clean.sh
scripts/windows/: build.bat  clean.bat  configure.bat
